--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -600,6 +600,8 @@ services:
       # - REMOTE_AUTH_AUTO_CREATE_USER= #optional
       # - REMOTE_AUTH_DEFAULT_GROUPS= #optional
       # - REMOTE_AUTH_DEFAULT_PERMISSIONS= #optional
+    # networks:
+    #   - traefik_proxy
     volumes:
       - "/mnt/appdata/netbox:/config"
     restart: unless-stopped
@@ -629,8 +631,16 @@ services:
     environment:
       - TZ=America/Chicago
       - "REDIS_PASSWORD=${HTTP_PASSWORD}"
+    # networks:
+    #   - traefik_proxy
     volumes:
       - "/mnt/appdata/netbox-cache:/data"
+    labels: 
+      - traefik.enable=true
+      - traefik.backend=netbox
+      - "traefik.frontend.rule=Host:netbox-cache.${DOMAINNAME}"
+      - traefik.port=6379
+      - traefik.docker.network=traefik_proxy
   netbox-db:
     container_name: netbox-db
     image: postgres:14.0-alpine
@@ -640,9 +650,17 @@ services:
       - TZ=America/Chicago
       - "POSTGRES_USER=${HTTP_USERNAME}"
       - "POSTGRES_PASSWORD=${HTTP_PASSWORD}"
+    # networks:
+    #   - traefik_proxy
     volumes:
       - "/mnt/appdata/netbox-db:/var/lib/postgresql/data"
       - /etc/passwd:/etc/passwd:ro
+    labels: 
+      - traefik.enable=true
+      - traefik.backend=netbox-db
+      - "traefik.frontend.rule=Host:netbox-db.${DOMAINNAME}"
+      - traefik.port=5432
+      - traefik.docker.network=traefik_proxy
   overseerr:
     image: lscr.io/linuxserver/overseerr:latest
     container_name: overseerr
