--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -585,19 +585,20 @@ services:
       - DB_NAME=netbox
       - "DB_USER=${HTTP_USERNAME}"
       - "DB_PASSWORD=${HTTP_PASSWORD}"
-      - REDIS_DB_CACHE=0
-      - REDIS_DB_TASK=1
       - REDIS_HOST=netbox-cache
-      - REDIS_PORT=6379
-      - "REDIS_CACHE_PASSWORD=${HTTP_PASSWORD}"
-      - "REDIS_PASSWORD=${HTTP_PASSWORD}"
-      - REDIS_CACHE_DATABASE=1
-      - REDIS_CACHE_HOST=redis-cache
-      - REDIS_CACHE_INSECURE_SKIP_TLS_VERIFY=false
-      - REDIS_CACHE_SSL=false
       - REDIS_DATABASE=0
       - REDIS_INSECURE_SKIP_TLS_VERIFY=false
       - REDIS_SSL=false
+      - "REDIS_PASSWORD=${HTTP_PASSWORD}"
+      - REDIS_PORT=6379
+      # - REDIS_DB_CACHE=0
+      # - REDIS_DB_TASK=1
+      # - "REDIS_CACHE_PASSWORD=${HTTP_PASSWORD}"
+      # - REDIS_CACHE_DATABASE=1
+      # - REDIS_CACHE_HOST=redis-cache
+      # - REDIS_CACHE_INSECURE_SKIP_TLS_VERIFY=false
+      # - REDIS_CACHE_SSL=false
+
       # - SUPERUSER_EMAIL=
       # - SUPERUSER_PASSWORD=
       # - ALLOWED_HOST=
