--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -587,7 +587,7 @@ services:
       - "DB_PASSWORD=${HTTP_PASSWORD}"
       - REDIS_HOST=netbox-cache
       - REDIS_PORT=6379
-      - "SUPERUSER_EMAIL=${MY_EMAIL}""
+      - "SUPERUSER_EMAIL=${MY_EMAIL}"
       - "SUPERUSER_PASSWORD=${HTTP_PASSWORD}"
     volumes:
       - "/mnt/appdata/netbox:/config"
