--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -305,7 +305,7 @@ services:
       - "TZ=${TZ}"
       - "PUID=${PUID}"
       - "PGID=${PGID}"
-    image: lscr.io/linuxserver/radarr:latest
+    image: lscr.io/linuxserver/radarr:5.0.2-nightly
     labels: 
       - traefik.enable=true
       - traefik.backend=radarr
