--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -22,36 +22,36 @@ volumes:
   timemachine-var-cache-samba:
   timemachine-run-samba:
 services:
-  olivetin:
-    container_name: olivetin
-    image: jamesread/olivetin
-    environment:
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"
-      - "TZ=${TZ}"
-    volumes:
-      - "/mnt/appdata/olivetin/:/config"
-      - "/var/run/docker.sock:/var/run/docker.sock"
-      - "/home/${HTTP_USERNAME}/.ssh/:/home/olivetin/.ssh/:ro"
-      - "/mnt/appdata/olivetin/sudoer/:/etc/sudoers.d/"
-    restart: unless-stopped
-    networks: 
-      - traefik_proxy
-    labels: 
-      - traefik.enable=true
-      - traefik.backend=olivetin
-      - "traefik.frontend.rule=Host:olivetin.${DOMAINNAME}"
-      - traefik.port=1337
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
+  # olivetin:
+  #   container_name: olivetin
+  #   image: jamesread/olivetin
+  #   environment:
+  #     - "PUID=${PUID}"
+  #     - "PGID=${PGID}"
+  #     - "TZ=${TZ}"
+  #   volumes:
+  #     - "/mnt/appdata/olivetin/:/config"
+  #     - "/var/run/docker.sock:/var/run/docker.sock"
+  #     - "/home/${HTTP_USERNAME}/.ssh/:/home/olivetin/.ssh/:ro"
+  #     - "/mnt/appdata/olivetin/sudoer/:/etc/sudoers.d/"
+  #   restart: unless-stopped
+  #   networks: 
+  #     - traefik_proxy
+  #   labels: 
+  #     - traefik.enable=true
+  #     - traefik.backend=olivetin
+  #     - "traefik.frontend.rule=Host:olivetin.${DOMAINNAME}"
+  #     - traefik.port=1337
+  #     - traefik.docker.network=traefik_proxy
+  #     - traefik.frontend.headers.SSLRedirect=true
+  #     - traefik.frontend.headers.STSSeconds=315360000
+  #     - traefik.frontend.headers.browserXSSFilter=true
+  #     - traefik.frontend.headers.contentTypeNosniff=true
+  #     - traefik.frontend.headers.forceSTSHeader=true
+  #     - traefik.frontend.headers.SSLHost=frost.haus
+  #     - traefik.frontend.headers.STSIncludeSubdomains=true
+  #     - traefik.frontend.headers.STSPreload=true
+  #     - traefik.frontend.headers.frameDeny=false
   samba:
     container_name: winshare
     hostname: samba
@@ -226,34 +226,34 @@ services:
     restart: always
     volumes: 
       - "/mnt/appdata/organizr:/config"
-  kavita:
-    container_name: kavita
-    environment: 
-      - "PUID=${PUID}"
-      - "PGID=${PGID}"
-      - "TZ=${TZ}"
-    image: kizaing/kavita:latest
-    volumes:
-      - "/mnt/appdata/kavita:/kavita/config"
-      - "/mnt/media/manga:/manga"
-      - "/mnt/media/books:/books"
-      - "/mnt/media/comics:/comics"
-    restart: unless-stopped
-    labels: 
-      - traefik.enable=true
-      - traefik.backend=kavita
-      - "traefik.frontend.rule=Host:kavita.${DOMAINNAME}"
-      - traefik.port=5000
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
+  # kavita:
+  #   container_name: kavita
+  #   environment: 
+  #     - "PUID=${PUID}"
+  #     - "PGID=${PGID}"
+  #     - "TZ=${TZ}"
+  #   image: kizaing/kavita:latest
+  #   volumes:
+  #     - "/mnt/appdata/kavita:/kavita/config"
+  #     - "/mnt/media/manga:/manga"
+  #     - "/mnt/media/books:/books"
+  #     - "/mnt/media/comics:/comics"
+  #   restart: unless-stopped
+  #   labels: 
+  #     - traefik.enable=true
+  #     - traefik.backend=kavita
+  #     - "traefik.frontend.rule=Host:kavita.${DOMAINNAME}"
+  #     - traefik.port=5000
+  #     - traefik.docker.network=traefik_proxy
+  #     - traefik.frontend.headers.SSLRedirect=true
+  #     - traefik.frontend.headers.STSSeconds=315360000
+  #     - traefik.frontend.headers.browserXSSFilter=true
+  #     - traefik.frontend.headers.contentTypeNosniff=true
+  #     - traefik.frontend.headers.forceSTSHeader=true
+  #     - traefik.frontend.headers.SSLHost=frost.haus
+  #     - traefik.frontend.headers.STSIncludeSubdomains=true
+  #     - traefik.frontend.headers.STSPreload=true
+  #     - traefik.frontend.headers.frameDeny=false
   plex:
     image: plexinc/pms-docker:plexpass
     container_name: plex
@@ -822,31 +822,31 @@ services:
   #     macvlan_network:
   #       ipv4_address: 192.168.100.13
   #   hostname: wireguard
-  dashy: 
-    image: ghcr.io/lissy93/dashy:latest
-    container_name: dashy
-    restart: always
-    user: "${PUID}:${PGID}"
-    environment: 
-      - TZ=America/Chicago
-      - NODE_ENV=production
-    volumes: 
-      - "/mnt/appdata/dashy/:/app/public/"
-    labels: 
-      - traefik.enable=true
-      - traefik.backend=dashy
-      - "traefik.frontend.rule=Host:dashy.${DOMAINNAME}"
-      - traefik.port=80
-      - traefik.docker.network=traefik_proxy
-      - traefik.frontend.headers.SSLRedirect=true
-      - traefik.frontend.headers.STSSeconds=315360000
-      - traefik.frontend.headers.browserXSSFilter=true
-      - traefik.frontend.headers.contentTypeNosniff=true
-      - traefik.frontend.headers.forceSTSHeader=true
-      - traefik.frontend.headers.SSLHost=frost.haus
-      - traefik.frontend.headers.STSIncludeSubdomains=true
-      - traefik.frontend.headers.STSPreload=true
-      - traefik.frontend.headers.frameDeny=false
+  # dashy: 
+  #   image: ghcr.io/lissy93/dashy:latest
+  #   container_name: dashy
+  #   restart: always
+  #   user: "${PUID}:${PGID}"
+  #   environment: 
+  #     - TZ=America/Chicago
+  #     - NODE_ENV=production
+  #   volumes: 
+  #     - "/mnt/appdata/dashy/:/app/public/"
+  #   labels: 
+  #     - traefik.enable=true
+  #     - traefik.backend=dashy
+  #     - "traefik.frontend.rule=Host:dashy.${DOMAINNAME}"
+  #     - traefik.port=80
+  #     - traefik.docker.network=traefik_proxy
+  #     - traefik.frontend.headers.SSLRedirect=true
+  #     - traefik.frontend.headers.STSSeconds=315360000
+  #     - traefik.frontend.headers.browserXSSFilter=true
+  #     - traefik.frontend.headers.contentTypeNosniff=true
+  #     - traefik.frontend.headers.forceSTSHeader=true
+  #     - traefik.frontend.headers.SSLHost=frost.haus
+  #     - traefik.frontend.headers.STSIncludeSubdomains=true
+  #     - traefik.frontend.headers.STSPreload=true
+  #     - traefik.frontend.headers.frameDeny=false
     # networks: 
     #   - traefik_proxy
     # healthcheck:
