--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -818,9 +818,12 @@ services:
       - 51820:51820/udp
     sysctls:
       - net.ipv4.conf.all.src_valid_mark=1
-    networks: 
-      macvlan_network:
-        ipv4_address: 192.168.100.13
+    # networks: 
+      # macvlan_network:
+      #   ipv4_address: 192.168.100.13
+    networks:
+      default:
+        # ipv4_address: 172.20.0.50
     hostname: wireguard
   # dashy: 
   #   image: ghcr.io/lissy93/dashy:latest
