--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -11,6 +11,7 @@ networks:
       name: traefik_proxy
   macvlan_network:
     driver: macvlan
+    external: true
     driver_opts:
       parent: ens18
     ipam:
