--- a/docker-compose.yml
+++ b/docker-compose.yml
@@ -23,10 +23,11 @@ networks:
     ipam:
       config:
         - subnet: 192.168.200.0/24
+include:
+  - compose/$HOSTNAME/main.yml
+  - compose/$HOSTNAME/socket-proxy.yml
+
 volumes:
   timemachine-var-lib-samba:
   timemachine-var-cache-samba:
   timemachine-run-samba:
-include:
-  - compose/$HOSTNAME/main.yml
-#  - compose/$HOSTNAME/portainer.yml
